final materials and rough draft

--- a/Value_value.ipynb
+++ b/Value_value.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -96,13 +96,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_clean_tts():\n",
     "    '''Thsi function will get and clean data for the models'''\n",
-    "    hold = ek.get_data('SPY', fields = [ek.TR_Field('TR.ETPConstituentRIC',params={'SDate':'2020-10-06'})])[0]\n",
+    "    hold = ek.get_data('SPY', fields = [ek.TR_Field('TR.ETPConstituentRIC',params={'SDate':'2020-11-17'})])[0]\n",
     "    hold = hold[hold['Constituent RIC'] != 'GOOG.OQ']\n",
     "    rics = [x for x in hold['Constituent RIC']]\n",
     "    if 'GOOG.OQ' in rics == True:\n",
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,9 +294,13 @@
     "    X_eval = data.drop(['Instrument'], axis = 1).dropna()\n",
     "    sect = X_eval['GICS Sector Code'].to_list()\n",
     "    X_eval = X_eval.drop(['GICS Sector Code'], axis=1)\n",
-    "    lims = X_eval.quantile(0.1)\n",
-    "    lims_2 = X_eval.quantile(0.9)\n",
-    "    X_eval = X_eval.clip(lims, lims_2, axis = 1)\n",
+    "    X_eval['Forward P/E (Daily Time Series Ratio)'] = winsorize( X_eval['Forward P/E (Daily Time Series Ratio)'].to_numpy(), limits=[0.1,0.1])\n",
+    "    X_eval['Price To Book Value Per Share (Daily Time Series Ratio)'] = winsorize( X_eval['Price To Book Value Per Share (Daily Time Series Ratio)'].to_numpy(), limits=[0.1,0.1])\n",
+    "    X_eval['Enterprise Value To Operating Cash Flow (Daily Time Series Ratio)'] = winsorize( X_eval['Enterprise Value To Operating Cash Flow (Daily Time Series Ratio)'].to_numpy(), limits=[0.1,0.1])\n",
+    "    \n",
+    "    #lims = X_eval.quantile(0.1)\n",
+    "    #lims_2 = X_eval.quantile(0.9)\n",
+    "    #X_eval = X_eval.clip(lims, lims_2, axis = 1)\n",
     "    #X_eval['GICS Sector Code'] = sect\n",
     "    \n",
     "    OS_res = mod.predict(X_eval)\n",
@@ -305,7 +309,7 @@
     "    clf_results = data.dropna()\n",
     "    clf_results['Predictions'] = OS_res\n",
     "    clf_results['Probs'] = [p[1] for p in OS_probs ]    \n",
-    "    SPYV = ek.get_data('SPYV.K', fields = [ek.TR_Field('TR.ETPConstituentRIC',params={'SDate':'2020-10-07'})])[0]\n",
+    "    SPYV = ek.get_data('SPYV.K', fields = [ek.TR_Field('TR.ETPConstituentRIC',params={'SDate':'2020-11-17'})])[0]\n",
     "    actuals = [x for x in SPYV['Constituent RIC']]\n",
     "    j = clf_results['Instrument'].tolist()\n",
     "    y_real = []\n",
@@ -405,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +493,7 @@
     "    df = df[df['GICS Sector Code']!=40] #### Remove Fin\n",
     "    df = df[df['GICS Sector Code']!=60] #### Remove RE\n",
     "    X = df[['Forward P/E (Daily Time Series Ratio)', 'Price To Book Value Per Share (Daily Time Series Ratio)', 'Enterprise Value To Operating Cash Flow (Daily Time Series Ratio)']].to_numpy()\n",
-    "    y = df[['Actuals']] - 1\n",
+    "    y = abs(df[['Actuals']] -1)\n",
     "    Norm_X = MinMaxScaler().fit(X).transform(X)\n",
     "    kmeans = KMeans(n_clusters = 2, random_state = 42)\n",
     "    mod = kmeans.fit(Norm_X)\n",
@@ -504,277 +508,85 @@
     "        sec_labs.append(sectors[codes.index(d)])\n",
     "    df['Sector Name'] = sec_labs\n",
     "    \n",
-    "    for s in \n",
+    "    accu_by_sector = {}\n",
+    "    \n",
+    "    for s in sectors:\n",
+    "        if s not in ['RE', 'Fin',]:\n",
+    "            df_x = df[df['Sector Name']==s]\n",
+    "            score = metrics.accuracy_score(df_x['unsup_res'], abs(df_x['Actuals']-1))\n",
+    "            accu_by_sector[s] = score\n",
+    "    \n",
+    "    accu_by_sector['Overall'] = accu    \n",
+    "    colors = [\"#0466c8\", \"#0353a4\", \"#023e7d\", \"#002855\", \"#001845\", '#001233', \"#33415c\", \"#5c677d\", \"#7d8597\"]\n",
+    "    fig = go.Figure(go.Bar(\n",
+    "            x=list(accu_by_sector.values()),\n",
+    "            y=list(accu_by_sector.keys()),\n",
+    "            orientation='h',\n",
+    "            text = list(accu_by_sector.values()),\n",
+    "            textposition='auto',\n",
+    "            marker = dict(color = colors)))\n",
+    "\n",
+    "    fig.update_traces(texttemplate='%{text:.2%}', textposition='auto'),\n",
+    "    fig.update_layout(\n",
+    "        paper_bgcolor='white',\n",
+    "        plot_bgcolor= 'white',\n",
+    "        height = 600,\n",
+    "        width = 678,\n",
     "        \n",
+    "        font = dict(family= 'pt sans narrow', size = 25),\n",
+    "        title= {'text': \"KMeans Model Accuracy by sector\"},\n",
+    "        xaxis=dict(\n",
+    "            zeroline=False,\n",
+    "            showline=False,\n",
+    "            showticklabels=False,\n",
+    "            showgrid=True))\n",
+    "\n",
+    "    #py.iplot(fig_6, filename='fig_6')\n",
+    "    pio.write_html(fig, file='sectorkmns.html', auto_open=False)\n",
     "    \n",
     "    \n",
+    "    df_test = pd.DataFrame(Norm_X, columns = ['P/E', 'P/B', 'EV/FCF'])\n",
+    "        \n",
+    "    df_test['Instrumnet'] = list(df['Instrument'])\n",
+    "    df_test['Prediction'] = list(df['unsup_res'])\n",
+    "    df_test['Prediction'] = ['Growth' if i == 1 else 'Value' for i in list(df_test['Prediction'])]\n",
+    "    df_test['Actuals'] =  list(abs(df['Actuals']-1))\n",
+    "    df_test['Actuals'] = ['Growth' if i == 1 else 'Value' for i in list(df_test['Actuals'])]\n",
+    "     \n",
+    "    fig_2 = px.scatter_3d(df_test, x = 'P/E', y ='P/B', z = 'EV/FCF', color = 'Prediction',  symbol='Actuals', opacity = 0.8, hover_name = 'Instrumnet')\n",
+    "    fig_2.update_layout(\n",
+    "        paper_bgcolor='white',\n",
+    "        plot_bgcolor= 'white',\n",
+    "        height = 900,\n",
+    "        width = 1100,\n",
+    "        font = dict(family= 'pt sans narrow'),\n",
+    "        title= {'text': \"Kmeans Clusters\", 'font':{'size':25}})\n",
     "    \n",
-    "    return df"
+    "    fig_2.update_traces(marker_coloraxis=None, marker=dict(size=5,\n",
+    "                              line=dict(width=1)))\n",
+    "    \n",
+    "    \n",
+    "    pio.write_html(fig_2, file='clust.html', auto_open=True)\n",
+    "    \n",
+    "    \n",
+    "    return df_test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 217,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Instrument</th>\n",
-       "      <th>GICS Sector Code</th>\n",
-       "      <th>Forward P/E (Daily Time Series Ratio)</th>\n",
-       "      <th>Price To Book Value Per Share (Daily Time Series Ratio)</th>\n",
-       "      <th>Enterprise Value To Operating Cash Flow (Daily Time Series Ratio)</th>\n",
-       "      <th>Predictions</th>\n",
-       "      <th>Probs</th>\n",
-       "      <th>Actuals</th>\n",
-       "      <th>hits</th>\n",
-       "      <th>unsup_res</th>\n",
-       "      <th>Sector Name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>SHW.N</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>27.807177</td>\n",
-       "      <td>15.777830</td>\n",
-       "      <td>22.977151</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.110348</td>\n",
-       "      <td>0</td>\n",
-       "      <td>green</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Mat</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>DTE.N</td>\n",
-       "      <td>55.0</td>\n",
-       "      <td>18.686658</td>\n",
-       "      <td>2.086542</td>\n",
-       "      <td>12.639971</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.594741</td>\n",
-       "      <td>1</td>\n",
-       "      <td>green</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Utl</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>LOW.N</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>18.570842</td>\n",
-       "      <td>27.744298</td>\n",
-       "      <td>10.420535</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.450691</td>\n",
-       "      <td>1</td>\n",
-       "      <td>red</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Disc</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>WBA.OQ</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>8.149876</td>\n",
-       "      <td>1.671607</td>\n",
-       "      <td>9.214962</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.829508</td>\n",
-       "      <td>1</td>\n",
-       "      <td>green</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Stap</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>MAR.OQ</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>55.906997</td>\n",
-       "      <td>173.875782</td>\n",
-       "      <td>23.248087</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.110348</td>\n",
-       "      <td>0</td>\n",
-       "      <td>green</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Disc</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>498</th>\n",
-       "      <td>CI.N</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>10.589318</td>\n",
-       "      <td>1.681504</td>\n",
-       "      <td>13.453214</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.833384</td>\n",
-       "      <td>1</td>\n",
-       "      <td>green</td>\n",
-       "      <td>0</td>\n",
-       "      <td>HC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>499</th>\n",
-       "      <td>FIS.N</td>\n",
-       "      <td>45.0</td>\n",
-       "      <td>22.684657</td>\n",
-       "      <td>1.858445</td>\n",
-       "      <td>28.949142</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.356917</td>\n",
-       "      <td>1</td>\n",
-       "      <td>red</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Tech</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>500</th>\n",
-       "      <td>FTNT.OQ</td>\n",
-       "      <td>45.0</td>\n",
-       "      <td>33.195458</td>\n",
-       "      <td>26.948354</td>\n",
-       "      <td>17.969174</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.110348</td>\n",
-       "      <td>0</td>\n",
-       "      <td>green</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Tech</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>501</th>\n",
-       "      <td>TXN.OQ</td>\n",
-       "      <td>45.0</td>\n",
-       "      <td>27.073011</td>\n",
-       "      <td>17.140328</td>\n",
-       "      <td>24.968620</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.110348</td>\n",
-       "      <td>1</td>\n",
-       "      <td>red</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Tech</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>502</th>\n",
-       "      <td>CTAS.OQ</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>39.407325</td>\n",
-       "      <td>10.481765</td>\n",
-       "      <td>30.094322</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.110348</td>\n",
-       "      <td>0</td>\n",
-       "      <td>green</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Ind</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>379 rows × 11 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Instrument  GICS Sector Code  Forward P/E (Daily Time Series Ratio)  \\\n",
-       "0        SHW.N              15.0                              27.807177   \n",
-       "1        DTE.N              55.0                              18.686658   \n",
-       "2        LOW.N              25.0                              18.570842   \n",
-       "3       WBA.OQ              30.0                               8.149876   \n",
-       "4       MAR.OQ              25.0                              55.906997   \n",
-       "..         ...               ...                                    ...   \n",
-       "498       CI.N              35.0                              10.589318   \n",
-       "499      FIS.N              45.0                              22.684657   \n",
-       "500    FTNT.OQ              45.0                              33.195458   \n",
-       "501     TXN.OQ              45.0                              27.073011   \n",
-       "502    CTAS.OQ              20.0                              39.407325   \n",
-       "\n",
-       "     Price To Book Value Per Share (Daily Time Series Ratio)  \\\n",
-       "0                                            15.777830         \n",
-       "1                                             2.086542         \n",
-       "2                                            27.744298         \n",
-       "3                                             1.671607         \n",
-       "4                                           173.875782         \n",
-       "..                                                 ...         \n",
-       "498                                           1.681504         \n",
-       "499                                           1.858445         \n",
-       "500                                          26.948354         \n",
-       "501                                          17.140328         \n",
-       "502                                          10.481765         \n",
-       "\n",
-       "     Enterprise Value To Operating Cash Flow (Daily Time Series Ratio)  \\\n",
-       "0                                            22.977151                   \n",
-       "1                                            12.639971                   \n",
-       "2                                            10.420535                   \n",
-       "3                                             9.214962                   \n",
-       "4                                            23.248087                   \n",
-       "..                                                 ...                   \n",
-       "498                                          13.453214                   \n",
-       "499                                          28.949142                   \n",
-       "500                                          17.969174                   \n",
-       "501                                          24.968620                   \n",
-       "502                                          30.094322                   \n",
-       "\n",
-       "     Predictions     Probs  Actuals   hits  unsup_res Sector Name  \n",
-       "0              0  0.110348        0  green          0         Mat  \n",
-       "1              1  0.594741        1  green          0         Utl  \n",
-       "2              0  0.450691        1    red          0        Disc  \n",
-       "3              1  0.829508        1  green          0        Stap  \n",
-       "4              0  0.110348        0  green          1        Disc  \n",
-       "..           ...       ...      ...    ...        ...         ...  \n",
-       "498            1  0.833384        1  green          0          HC  \n",
-       "499            0  0.356917        1    red          0        Tech  \n",
-       "500            0  0.110348        0  green          0        Tech  \n",
-       "501            0  0.110348        1    red          0        Tech  \n",
-       "502            0  0.110348        0  green          0         Ind  \n",
-       "\n",
-       "[379 rows x 11 columns]"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "k_means_mod()"
+    "j = k_means_mod()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
